<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MusicDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/song_image_details"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/melody_music"
            android:contentDescription="@string/song_image" />
        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:textColor="@android:color/white"
            android:text="@string/play_txt"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/title_txt"/>
                    <TextView
                        android:id="@+id/song_title_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textSize="14sp"
                        tools:text="Title"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/artist_txt"
                        />
                    <TextView
                        android:id="@+id/song_author_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textSize="14sp"
                        tools:text="Author"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/album_txt"/>
                    <TextView
                        android:id="@+id/song_album_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textSize="14sp"
                        tools:text="Album"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/duration_txt"/>
                    <TextView
                        android:id="@+id/song_duration_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textSize="14sp"
                        tools:text="00:00"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/genre_txt"/>
                    <TextView
                        android:id="@+id/song_genre_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textSize="14sp"
                        tools:text="Genre"/>
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>